<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/CalendarHeader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/calendar_top_info_height">

        <LinearLayout
            android:id="@+id/CaHeaderDateInfo"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/CaHeaderArrowRight"
            app:layout_constraintStart_toEndOf="@+id/CaHeaderArrowLeft"
            app:layout_constraintTop_toTopOf="parent">

            <!-- must have a year number-->
            <TextView
                android:id="@+id/CaHeDateInfoYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="24sp"/>
            <!-- must have a month string-->
            <TextView
                android:id="@+id/CaHeDateInfoMonth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="18sp"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/CaHeaderArrowLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/left_arrow"
            android:visibility="visible"
            android:src="@drawable/ic_keyboard_arrow_left_black_36dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/CaHeaderArrowRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="31dp"
            android:contentDescription="@string/right_arrow"
            android:visibility="visible"
            android:src="@drawable/ic_keyboard_arrow_right_black_36dp"
        app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/CalendarBodyMetaData"
        android:layout_width="match_parent"
        android:layout_height="@dimen/calendar_days_row_height"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/CaBoMetaDataFirstDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/week_day_1"
            android:textAlignment="center"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/CaBoMetaDataSecondDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/week_day_2"
            android:textAlignment="center"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/CaBoMetaDataThirdDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/week_day_3"
            android:textAlignment="center"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/CaBoMetaDataFourthDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/week_day_4"
            android:textAlignment="center"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/CaBoMetaDataFifthDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/week_day_5"
            android:textAlignment="center"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/CaBoMetaDataSixthDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/week_day_6"
            android:textAlignment="center"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/CaBoMetaDataSeventhDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/week_day_7"
            android:textAlignment="center"
            android:textSize="18sp"/>
    </LinearLayout>

    <GridView
        android:id="@+id/CalendarBody"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:stretchMode="spacingWidthUniform"
        android:fastScrollEnabled="false"
        android:focusable="false"
        android:numColumns="7"
        android:scrollbars="none" />

</LinearLayout>